--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
             "email": "tommasosacramone.www@gmail.com"
         }
     ],
+    "version": "2.0.0-dev",
     "require": {
         "php": ">=5.3.0",
         "typo3/cms-core": ">=6.2.0",
-        "ts/restclient" : ">=1.1.2"        
+        "ts/restclient" : ">=1.1.2 || "        
     },       
     "keywords": ["restclient", "rest", "client", "restful", "http", "webservices", "ui", "tool"],
     "support": {
