--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,6 @@
             "email": "tommasosacramone.www@gmail.com"
         }
     ],
-    "version": "2.0.0-dev",
     "require": {
         "php": ">=5.3.0",
         "typo3/cms-core": ">=6.2.0",
@@ -19,5 +18,5 @@
     "support": {
         "issues": "https://forge.typo3.org/projects/extension-restclient"
     },
-    "version": "1.1.1"
+    "version": "2.0.0-dev"
 }
