--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,18 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0",
-        "typo3/cms-core": ">=6.2.0",
+        "php": ">=7.0.0",
+        "typo3/cms-core": ">=8.7.0",
         "ts/restclient" : ">=1.1.2"        
     },       
     "keywords": ["restclient", "rest", "client", "restful", "http", "webservices", "ui", "tool"],
     "support": {
         "issues": "https://forge.typo3.org/projects/extension-restclient"
+    },
+    "autoload": {
+        "psr-4": {
+            "TS\\RestclientUi\\": "Classes/"
+        }
     },
     "version": "2.0.0-dev"
 }
